# AgentIQ

./: README.md  example.py  example_zero_mq.py  pyproject.toml  setup.py
src/: agent_client.py  orchestrator.py
src/helpers/: agents.py  orchestrator.py
src/mixins/: agent_mixin.py  input_mixin.py  orchestrator.py  processor.py  result_mixin.py
tests/: test_orchestrator.py
tests/integration/: test_agent_integration.py  test_orchestrator_integration.py
tests/unit/: test_agent_client.py  test_agent_mixin.py  test_orchestrator.py  test_orchestrator_mixin.py
