[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A short description of your project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Add your production dependencies here

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
# Add your development dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".venv"
] 